--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "sunset-house-bot",
   "version": "1.0.0",
   "description": "Бот для приема анкет в хаус Sunset",
-  "main": "bot.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "node-telegram-bot-api": "^0.64.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
-} 
+}
