--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "vercel-build": "echo 'Сборка завершена'"
   },
   "dependencies": {
-    "ejs": "^3.1.9",
+    "node-telegram-bot-api": "^0.64.0",
     "express": "^4.18.2",
-    "node-telegram-bot-api": "^0.64.0"
+    "ejs": "^3.1.9"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.0.3"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
