--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,11 @@
   "builds": [
     {
       "src": "api/webhook.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "memory": 1024,
+        "maxDuration": 60
+      }
     },
     {
       "src": "server.js",
@@ -23,11 +27,5 @@
   ],
   "env": {
     "TELEGRAM_BOT_TOKEN": "7417777601:AAGy92M0pjoizRHILNT7d72xMNf8a0BkKK8"
-  },
-  "functions": {
-    "api/webhook.js": {
-      "memory": 1024,
-      "maxDuration": 60
-    }
   }
 } 
