--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "vercel-build": "echo 'Сборка завершена'"
   },
   "dependencies": {
-    "node-telegram-bot-api": "^0.64.0",
+    "axios": "^1.8.4",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "ejs": "^3.1.9"
+    "node-telegram-bot-api": "^0.64.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
