--- a/package.json
+++ b/package.json
@@ -1,30 +1,19 @@
 {
-  "name": "sunset-bot",
+  "name": "sunset-house-bot",
   "version": "1.0.0",
-  "description": "Telegram бот для приема заявок в хаус Sunset",
-  "main": "server.js",
+  "description": "Бот для приема анкет в хаус Sunset",
+  "main": "bot.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node bot.js",
+    "dev": "nodemon bot.js"
   },
-  "keywords": [
-    "telegram",
-    "bot",
-    "minecraft",
-    "house",
-    "sunset"
-  ],
-  "author": "Sunset House",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "express": "^4.18.2",
-    "node-telegram-bot-api": "^0.63.0"
-  },
-  "engines": {
-    "node": ">=14.0.0"
+    "node-telegram-bot-api": "^0.64.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.3"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
-}
+} 
